GNOME Bugzilla – Bug 641822
Properties->Image: Description long lines should be wrapped.
Last modified: 2012-08-16 20:03:11 UTC
Created attachment 180377 [details] Image showing the problem Steps to reproduce: 1) Get image with long description 2) RMB on image -> Properties -> Image Behaviour: See attachment. I have to move Window to read all description text. Expected Behaviour: Long lines should be wrapped so that everything could be read without moving window. BTW. Filling bugs here is not convenient for me because I don't know which component should I select.
-> nautilus
Created attachment 221437 [details] [review] Wrap and possibly scroll when image properties are long
Created attachment 221439 [details] [review] Wrap and possibly scroll when image properties are long
Review of attachment 221439 [details] [review]: Looks good!
Attachment 221439 [details] pushed as 06ce7ef - Wrap and possibly scroll when image properties are long