Wrap and possibly scroll when image properties are long

Ported from Nautilus 3.6
See https://bugzilla.gnome.org/show_bug.cgi?id=641822